fix alignement gender update beneficiary

--- a/src/app/modules/beneficiary/update-beneficiary/update-beneficiary.component.scss
+++ b/src/app/modules/beneficiary/update-beneficiary/update-beneficiary.component.scss
@@ -1,222 +1,231 @@
 @import '../../../../assets/css/variable.scss';
 
 app-placeholder-stepper {
-    width: 100% !important;
-    height: 100% !important;
+  width: 100% !important;
+  height: 100% !important;
 }
 
 mat-divider {
-    margin-top: 10px;
-    margin-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 app-placeholder-panel {
-    width: 95%;
-    height: 50vh;
-    margin: auto;
+  width: 95%;
+  height: 50vh;
+  margin: auto;
 }
 
 .datepicker-mobile {
-    display: none;
+  display: none;
 }
 
 .datepicker-computer {
-    display: block;
+  display: block;
 }
 
-.all-information, .head, .member, .summary {
+.all-information,
+.head,
+.member,
+.summary {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+
+  .column-container {
+    min-width: 270px;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    margin: 0 10px;
+
+    .combo {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+      mat-form-field:first-child {
+        width: 100px;
+        margin-right: 10px;
+      }
+    }
+  }
+
+  .specifics {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .lign-container {
+    display: flex;
     width: 100%;
-    height: auto;
+    justify-content: space-evenly;
+    margin: 20px;
+    flex-wrap: wrap;
+  }
+
+  .columns-phones {
+    justify-content: space-between;
+
+    .items-line {
+      width: 100%;
+      justify-content: flex-start;
+      align-items: center;
+      display: flex;
+
+      .phone-number {
+        flex-grow: 1;
+      }
+
+      .mat-form-field {
+        width: 40%;
+      }
+
+      .mat-form-field:first-child {
+        margin-right: 15px;
+      }
+    }
+  }
+
+  .textarea-input {
+    width: 80%;
+  }
+
+  .area-size {
+    width: 100%;
+  }
+
+  .info-resume {
+    padding: 15px;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
 
-    .column-container {
-        min-width: 270px;
-        display: flex;
-        flex-direction: column;
-        flex-grow: 1;
-        margin: 0 10px;
+    .info-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      flex-grow: 1;
+      margin-left: 10px;
+      margin-right: 10px;
 
-        .combo {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-
-            mat-form-field:first-child {
-                width: 100px;
-                margin-right: 10px;
-            }
-        }
+      p {
+        margin-left: 20px;
+      }
     }
+  }
 
-    .specifics {
-        display: flex;
-        flex-direction: column;
-    }
+  table {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    padding: 0 !important;
 
-    .lign-container {
-        display: flex;
-        width: 100%;
-        justify-content: space-evenly;
-        margin: 20px;
-        flex-wrap: wrap;
-    }
+    tr {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
 
-    .columns-phones {
-        justify-content: space-between;
-
-        .items-line {
-            width: 100%;
-            justify-content: flex-start;
-            align-items: center;
-            display: flex;
-
-            .phone-number {
-              flex-grow: 1;
-            }
-
-            .mat-form-field {
-                width: 40%;
-            }
-
-            .mat-form-field:first-child {
-                margin-right: 15px;
-            }
-        }
-    }
-
-    .textarea-input {
-        width: 80%;
-    }
-
-    .area-size {
-        width: 100%;
-    }
-
-    .info-resume {
-        padding: 15px;
+      td,
+      th {
         width: 100%;
         display: flex;
-        flex-direction: row;
         align-items: center;
         justify-content: center;
-        flex-wrap: wrap;
-
-        .info-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            flex-grow: 1;
-            margin-left: 10px;
-            margin-right: 10px;
-
-            p {
-                margin-left: 20px;
-            }
-
-        }
-    }
-
-    table {
-        display: flex;
-        flex-direction: column;
         flex-grow: 1;
-        padding: 0px !important;
-
-        tr {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-
-            th, td {
-                width: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-grow: 1;
-                padding-left: 5px;
-                padding-right: 5px;
-            }
-        }
+        padding-left: 5px;
+        padding-right: 5px;
+      }
     }
+  }
 
-    .button-container {
-        text-align: right;
-        width: 100%;
-        margin-bottom: 5px;
+  .button-container {
+    text-align: right;
+    width: 100%;
+    margin-bottom: 5px;
 
-        .member-rank{
-            float: left;
-            width: 30px;
-            height: 30px;
-            border-top-right-radius: 4px;
-            border-bottom-right-radius: 4px;
-            background-color: $bms_green;
-            color: $bms_grey;
-            font-weight: 800;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+    .member-rank {
+      float: left;
+      width: 30px;
+      height: 30px;
+      border-top-right-radius: 4px;
+      border-bottom-right-radius: 4px;
+      background-color: $bms_green;
+      color: $bms_grey;
+      font-weight: 800;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
+  }
 }
 
 .margin-right {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 
 .ng-select-focused ::ng-deep {
-    .ng-select-container::after {
-        border-color: #424242;
-        border-width: 2px;
-    }
+  .ng-select-container::after {
+    border-color: #424242;
+    border-width: 2px;
+  }
 }
 
 .ng-select-focused ::ng-deep .ng-select-container .ng-value-container .ng-placeholder {
-    color: #424242;
+  color: #424242;
 }
 
 .ng-select-focused ::ng-deep .ng-arrow {
-    color: #424242 !important;
+  color: #424242 !important;
 }
 
 .ng-select-opened ::ng-deep .ng-option-selected {
-    color: #424242 !important;
+  color: #424242 !important;
 }
 
-.mat-form-field{
-    margin-bottom: 6px;
+.mat-form-field {
+  margin-bottom: 6px;
 }
 
-.location{
-    margin-bottom: 15px;
+.location {
+  margin-bottom: 15px;
 }
 
-.phone-type, .country-code{
-    width: 25%;
-    margin-right: 15px;
+.country-code,
+.phone-type {
+  width: 25%;
+  margin-right: 15px;
 }
 
-.country-code{
-    margin-top: -12px;
+.country-code {
+  margin-top: -12px;
+}
+
+.gender {
+  margin-top: -6px;
+  margin-bottom: 6px;
 }
 
 @media only screen and (max-width: 750px) {
-    .datepicker-mobile {
-        display: block;
-    }
+  .datepicker-mobile {
+    display: block;
+  }
 
-    .datepicker-computer {
-        display: none !important;
-    }
+  .datepicker-computer {
+    display: none !important;
+  }
 
-    .column-container {
-        width: 100% !important;
-    }
+  .column-container {
+    width: 100% !important;
+  }
 
-    mat-horizontal-stepper {
-        width: 100%;
-    }
+  mat-horizontal-stepper {
+    width: 100%;
+  }
 }
